# nu_plugin_port_list

./: Cargo.toml  README.md  build.nu  nupm.nuon  package.nuon
src/: helper.rs  main.rs  port_list.rs
