[dependencies]
# It was pinned due to https://github.com/ohadravid/netstat2-rs/issues/15, which is resolved
# libc = "=0.2.169"
netstat2 = "0.11.1"
nu-plugin = "0.101.0"
sysinfo = "0.33.0"

[dependencies.nu-protocol]
features = ["plugin"]
version = "0.101.0"

[package]
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
description = "A nushell plugin to list all active connections"
edition = "2021"
homepage = "https://github.com/FMotalleb/nu_plugin_port_list"
keywords = ["nushell", "network", "plugin"]
license = "MIT"
name = "nu_plugin_port_list"
readme = "README.md"
repository = "https://github.com/FMotalleb/nu_plugin_port_list"
version = "1.4.6"
